Fix extra (and unusable) scrollbar inside CodeMirror

--- a/src/styles.less
+++ b/src/styles.less
@@ -205,7 +205,6 @@ main {
 
 .editor-pane .CodeMirror {
 	height: 100%;
-	overflow-y: auto;
 }
 
 .result-pane {
